appId: com.flperez.uballet
---
- runFlow: ../common/start-app.yaml

# Log in with receiver
- runFlow:
    file: ../common/sign-in-with-email.yaml
    env:
      EMAIL: "funded-11@test.com"
- runFlow:
    file: '../common/recover-with-seedphrase.yaml'
    env:
      SEED_PHRASE: "quarter punch list during dilemma stock ivory slot present beyond hope discover"

# Get receiver's initial FIUBA balance
- tapOn: "BalanceBottomTab"
- tapOn:
    id: "import-tokens-button"
- tapOn:
    id: "token-contract-address-input"
- inputText: "0xDECeBb93a3f41199eb2F8e4DD7520dF8Fb13773b"
- tapOn: "return"
- tapOn:
    id: "add-token-button"
- assertVisible:
    id: "custom-token-FIUBA"
- assertVisible:
    text: "FIUBA"
- assertVisible:
    text: "Uballet Token"
- tapOn:
    id: "header-back-button"
- swipe:
    direction: DOWN
- assertVisible:
    id: "token-balance-ETH"
- scrollUntilVisible:
    element:
      id: "token-balance-FIUBA"
    speed: 20
    visibilityPercentage: 100
- copyTextFrom:
    id: "token-balance-FIUBA-amount"
- evalScript: ${output.receiverInitialBalance = parseFloat(maestro.copiedText.replace(" ETH", ""))}
- runFlow: ../common/log-out.yaml

# Log in with sender
- runFlow:
    file: ../common/sign-in-with-email.yaml
    env:
      EMAIL: "funded-10@test.com"
- runFlow:
    file: ../common/recover-with-seedphrase.yaml
    env:
      SEED_PHRASE: "clever make parent vessel damage screen enact soap umbrella hip gentle current"

# Get Initial sender's FIUBA balance
- tapOn: "BalanceBottomTab"
- assertVisible:
    id: "token-balance-ETH"
- scrollUntilVisible:
    element:
      id: "token-balance-FIUBA"
- copyTextFrom:
    id: "token-balance-FIUBA-amount"
- evalScript: ${output.senderInitialBalance = parseFloat(maestro.copiedText.replace(" ETH", ""))}

# Transfer FIUBA Tokens
- tapOn: "Transfer"
- tapOn:
    id: "new-address-button"
- tapOn:
    id: "transfer-address-input"
- inputText: "4c84FcabaC95B4cD71541201C264610f30F007d5"
- tapOn: "return"
- tapOn:
    id: "input-address-next-button"
- swipe:
    start: 75%, 45%
    end: 75%, 25%
- tapOn:
    id: "transfer-amount-input"
- inputText: "25"
- tapOn: "Done"
- tapOn:
    id: "transfer-amount-next-button"
- tapOn:
    id: "transfer-gas-next-button"
- tapOn:
    id: "transfer-submit-button"
- assertVisible:
    id: "transaction-to"
- assertVisible:
    id: "transaction-from"
- assertVisible:
    id: "transaction-block-number"
- tapOn:
    id: "go-to-home-button"
# Assert FIUBA balance has gone down
- tapOn: "BalanceBottomTab"
- assertVisible:
    id: "token-balance-ETH"
- scrollUntilVisible:
    element:
      id: "token-balance-FIUBA"
- copyTextFrom:
    id: "token-balance-FIUBA-amount"
- evalScript: ${output.senderFinalBalance = parseFloat(maestro.copiedText.replace(" ETH", ""))}
- assertTrue: ${output.senderFinalBalance < output.senderInitialBalance}

# Assert receiver's FIUBA balance has gone up
- runFlow: ../common/log-out.yaml
- runFlow:
    file: ../common/sign-in-with-email.yaml
    env:
      EMAIL: "funded-11@test.com"
- tapOn: "BalanceBottomTab"
- assertVisible:
    id: "token-balance-ETH"
- scrollUntilVisible:
    element:
      id: "token-balance-FIUBA"
- copyTextFrom:
    id: "token-balance-FIUBA-amount"
- evalScript: ${output.receiverFinalBalance = parseFloat(maestro.copiedText.replace(" ETH", ""))}
- assertTrue: ${output.receiverInitialBalance < output.receiverFinalBalance}